correccion de bugs

--- a/frontend/ecommerce/src/app/components/shared/box-cards/box-cards.component.html
+++ b/frontend/ecommerce/src/app/components/shared/box-cards/box-cards.component.html
@@ -1,37 +1,37 @@
 <app-corousel-img></app-corousel-img>
 <div class="card-columns">
     <div routerLink="/compras" class="card text-center">
-        <img src="assets/img/card1.jpg" class="card-img-top" alt="">
+        <img src="assets/images/products/card1.jpg" class="card-img-top" alt="">
         <div class="card-img-overlay">
             <a routerLink="/compras" href="" class="btn btn-carrito1 btn-sm">LAPTOPS</a> 
         </div>
     </div>
     <div class="card text-center">
-        <img src="assets/img/card4.jpg" class="card-img-top" alt="">
+        <img src="assets/images/products/card4.jpg" class="card-img-top" alt="">
         <div class="card-img-overlay text-center">
             <a href="" class="btn btn-carrito btn-sm">GLASSES</a> 
         </div>
     </div>
     <div class="card text-center">
-        <img src="assets/img/card3.jpg" class="card-img-top" alt="">
+        <img src="assets/images/products/card3.jpg" class="card-img-top" alt="">
         <div class="card-img-overlay text-center">
             <a href="" class="btn btn-carrito btn-sm">PHONES</a>
         </div>
     </div>
     <div routerLink="/compras" class="card text-center">
-        <img src="assets/img/card1.jpg" class="card-img-top" alt="">
+        <img src="assets/images/products/card1.jpg" class="card-img-top" alt="">
         <div class="card-img-overlay">
             <a routerLink="/compras" href="" class="btn btn-carrito1 btn-sm">LAPTOPS</a> 
         </div>
     </div>
     <div routerLink="/compras" class="card text-center">
-        <img src="assets/img/card1.jpg" class="card-img-top" alt="">
+        <img src="assets/images/products/card1.jpg" class="card-img-top" alt="">
         <div class="card-img-overlay text-center">
             <a routerLink="/compras" href="" class="btn btn-carrito1 btn-sm">LAPTOPS</a>
         </div>
     </div>
     <div class="card text-center ">
-        <img src="assets/img/card2.jpg" class="card-img-top" alt="">
+        <img src="assets/images/products/card2.jpg" class="card-img-top" alt="">
         <div class="card-img-overlay text-center">
             <a href="" class="btn btn-carrito btn-sm">BAGS</a>
         </div>
