--- a/frontend/ecommerce/src/app/pages/panel-admin/dashboard/dashboard.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
             <div class="card-body">
                 <h3 class="card-title">Productos ( <span *ngIf="cargado">{{totalProductos}}</span> )</h3>
                 <hr>
-                <img src="assets/images/ecommerce.jpg" alt="" class="w100 img-thumbnail" >
+                <img src="assets/images/dashboard/ecommerce.jpg" alt="" class="w100 img-thumbnail" >
                
             </div>
             <div class="card-footer">
@@ -19,7 +19,7 @@
             <div class="card-body">
                 <h3 class="card-title">Usuarios ( <span *ngIf="cargado">{{totalUsuarios}}</span> )</h3>
                 <hr>
-                <img src="assets/images/usuarios.png" alt="" class="w100 img-thumbnail" >
+                <img src="assets/images/dashboard/usuarios.png" alt="" class="w100 img-thumbnail" >
                
             </div>
             <div class="card-footer">
@@ -34,7 +34,7 @@
             <div class="card-body">
                 <h3 class="card-title">Ordenes ( <span *ngIf="cargado">{{totalOrdenes}}</span> )</h3>
                 <hr>
-                <img src="assets/images/delivery.jpg" alt="" class="w100 img-thumbnail" >
+                <img src="assets/images/dashboard/delivery.jpg" alt="" class="w100 img-thumbnail" >
                
             </div>
             <div class="card-footer">
