--- a/frontend/ecommerce/src/app/components/shared/cards/cards.component.html
+++ b/frontend/ecommerce/src/app/components/shared/cards/cards.component.html
@@ -3,25 +3,25 @@
     <div class="row "  style="text-align: center;">
        <!--Primer Card-->
       <div class="col-3 ">
-        <img src="assets/icons/imagen1.jpg" class="d-block w-100 h-70 shadow" alt="..">
+        <img src="assets/images/carousel/imagen1.jpg" class="d-block w-100 h-70 shadow" alt="..">
         <label for="">Reloj OTTUM dorado</label><br>
         <strong>HNL. 2,000L</strong>
        </div>
        <!--Segunda Card-->
       <div  class="col-3 ">
-        <img src="assets/icons/imagen2.jpg" class="d-block w-100 h-70 shadow" alt=".." > 
+        <img src="assets/images/carousel/imagen2.jpg" class="d-block w-100 h-70 shadow" alt=".." > 
       <label for="" >Dell Lattitude i-7 9900k</label><br>
       <strong>HNL. 20,000L</strong>
       </div>
        <!--Tercer Card-->
       <div class="col-3">
-        <img src="assets/icons/imagen3.jpg" class="d-block w-100 h-70 shadow" alt="">
+        <img src="assets/images/carousel/imagen3.jpg" class="d-block w-100 h-70 shadow" alt="">
        <label for="">Ipad Apple</label><br>
         <strong>HNL. 16,000L</strong>
       </div>
       <!--Cuarta Card-->
       <div class="col-3 ">
-        <img src="assets/icons/imagen4.jpg" class="d-block w-100 h-70 shadow" alt="gamer">
+        <img src="assets/images/carousel/imagen4.jpg" class="d-block w-100 h-70 shadow" alt="gamer">
         <label for="">Ipords 3Gen.</label><br>
         <strong>HNL. 5,000L</strong>
       </div>
@@ -32,25 +32,25 @@
     <div class="row " style="text-align: center;">
          <!--Primer Card-->
         <div class="col-3 ">
-          <img src="assets/icons/imagen5.jpg" class="d-block w-100 h-70 shadow" alt="alexa">
+          <img src="assets/images/carousel/imagen5.jpg" class="d-block w-100 h-70 shadow" alt="alexa">
            <label>Iphone 11 256GB</label><br>
           <strong>HNL. 20,000L</strong>
          </div>
          <!--Segunda Card-->
         <div  class="col-3 ">
-          <img src="assets/icons/imagen6.png" class="d-block w-100 h-70 shadow" alt="samsung tablet">
+          <img src="assets/images/carousel/imagen6.png" class="d-block w-100 h-70 shadow" alt="samsung tablet">
           <label for="">Beats Studio 2Gen.</label><br>
           <strong>HNL. 2,000L</strong>
         </div>
          <!--Tercer Card-->
         <div class="col-3 ">
-          <img src="assets/icons/imagen7.jpg" class="d-block w-100 h-70 shadow" alt="ipords">
+          <img src="assets/images/carousel/imagen7.jpg" class="d-block w-100 h-70 shadow" alt="ipords">
           <p>Cargador Samsung Blanco</p>
           <strong>HNL. 20,000L</strong>
         </div>
         <!--Cuarta Card-->
         <div class="col-3 ">
-          <img src="assets/icons/imagen8.jpg" class="d-block w-100 h-70 shadow" alt="ipords">
+          <img src="assets/images/carousel/imagen8.jpg" class="d-block w-100 h-70 shadow" alt="ipords">
           <p>Cargador Samsung Blanco</p>
           <strong>HNL. 20,000L</strong>
         </div>
