--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -6,7 +6,7 @@
               <div class="menu-wrapper">
                   <!-- Logo -->
                   <div class="logo d-none d-lg-block">
-                      <a routerLink="/landing"><img src="assets/img/Logo.jpg" alt=""></a>
+                      <a routerLink="/landing"><img src="assets/images/products/Logo.jpg" alt=""></a>
                   </div>
                   <!-- Main-menu -->
                   <div class="main-menu d-none d-lg-block">
@@ -41,13 +41,13 @@
 
                   <div class="main-menu div-perfil d-none d-lg-block" *ngIf="auth.estaAutenticado()">
                     <ul>
-                      <li><a routerLink="/perfil"><img src="assets/icons/usuario.png" style="width: 30px;" alt=""></a>
+                      <li><a routerLink="/perfil"><img src="assets/images/icon/usuario.png" style="width: 30px;" alt=""></a>
                         <ul class="submenu">
                             <li><a routerLink="/perfil">Perfil</a></li>
                             <li><a routerLink="/misProductos">Mis Productos</a></li>
                             <li><a class="btn btn-outline-danger" (click)="salir()">Cerrar Sesión</a></li>
                         </ul>
-                      <li><a routerLink="/shopping"><img src="assets/icons/carrito.png" style="width: 30px;" alt=""></a>
+                      <li><a routerLink="/shopping"><img src="assets/images/icon/carrito.png" style="width: 30px;" alt=""></a>
                       </li>
                     </ul>
 
@@ -66,13 +66,13 @@
 
                   <div class="row justify-content-between">
                     <div class="col-5 col-md-5 d-block d-lg-none">
-                       <a routerLink="/landing"><img src="assets/img/Logo.jpg" class="img-fluid" height="50" alt=""></a>
+                       <a routerLink="/landing"><img src="assets/images/products/Logo.jpg" class="img-fluid" height="50" alt=""></a>
                     </div>
                     <div class="col-3 col-md-2 d-block d-lg-none">
                       <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
                         aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="dark-blue-text">
-                          <img src="assets/icons/hamburguer4.png" style="width: 50px; height: 50px; " alt="">
+                          <img src="assets/images/icon/hamburguer4.png" style="width: 50px; height: 50px; " alt="">
                         </span>
                       </button>
                     </div>
@@ -89,9 +89,6 @@
                       </div>
                     </div>
                   </div>
-
-
-
 
               </div>
 
