--- a/frontend/ecommerce/src/app/pages/home/perfil/perfil.component.html
+++ b/frontend/ecommerce/src/app/pages/home/perfil/perfil.component.html
@@ -11,7 +11,7 @@
         </div>
         <br>
         <div class="col-sm-10 text-center"><h5> {{cuenta.first_name +' '+ cuenta.last_name}} </h5></div>
-             <input type="file" id="selectedFile" style="display: none;" (change)="fotoSeleccionada($event)"/>
+             <input type="file" id="selectedFile" style="display: none;" (change)="fotoSeleccionada2($event)"/>
              <input type="button" class="btn btn-primary btn-lx botones" value="Nueva imagen de perfil" onclick="document.getElementById('selectedFile').click();" />
         </div>
         <hr>
@@ -75,7 +75,7 @@
                         </div>
                         <div class=" form-group col-md-6 mb-3">
                             
-                            <button type="button" class="btn btn-primary btn-lx" routerLink='/usuario' > Cancelar</button>
+                            <button type="button" class="btn btn-primary btn-lx" routerLink='/landing' > Cancelar</button>
                         </div>
                     </div>
                     
