--- a/frontend/ecommerce/src/app/pages/home/products/create/create.component.html
+++ b/frontend/ecommerce/src/app/pages/home/products/create/create.component.html
@@ -27,6 +27,10 @@
                             </option>
                         </select>
                     </div>
+                    <div class="form-group">
+                        <input type="file" id="selectedFile2" style="display: none;" (change)="fotoSeleccionada($event)"/>
+                        <input type="button" class="btn btn-primary form-control btn-lx botones text-white" value="Elegir Imagen del Producto" onclick="document.getElementById('selectedFile2').click();" />
+                    </div>
                    <!--  <input type="text" [(ngModel)]='productDetail.user_id' name="user_id">
                     <div class="file-field form-group">
                         <div class="btn btn-outline-primary btn-sm float-left form-control">
@@ -36,7 +40,7 @@
                     </div> <br> -->
                     <hr>
                     <div class="text-right">
-                        <button class="bg-primary text-white" (click)="addproduct()">Agregar</button>
+                        <button class="btn bg-primary text-white" (click)="addproduct()">Agregar</button>
                     </div>
                 </form>
             </div>
