--- a/frontend/ecommerce/src/app/components/shared/corousel-img/corousel-img.component.html
+++ b/frontend/ecommerce/src/app/components/shared/corousel-img/corousel-img.component.html
@@ -3,13 +3,13 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="assets/img/slide1.jpg" class="d-block w-100" alt="">
+              <img src="assets/images/products/slide1.jpg" class="d-block w-100" alt="">
             </div>
             <div class="carousel-item">
-              <img src="assets/img/slide2.jpg" class="d-block w-100" alt="" >
+              <img src="assets/images/products/slide2.jpg" class="d-block w-100" alt="" >
             </div>
             <div class="carousel-item">
-              <img src="assets/img/slide4.jpg" class="d-block w-100" alt="">
+              <img src="assets/images/products/slide4.jpg" class="d-block w-100" alt="">
             </div>
             <div class="carousel-item">
               <div class="corousel-caption">
@@ -20,7 +20,7 @@
                 <a class="example_a" routerLinkActive="active" routerLink="/offers"
                 target="_blank" rel="nofollow noopener">compra desde aqui</a>
               </div>
-                <img src="assets/img/slide3.jpg" class="d-block w-100" alt="">
+                <img src="assets/images/products/slide3.jpg" class="d-block w-100" alt="">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
