--- a/frontend/ecommerce/src/app/pages/home/informacion/informacion.component.html
+++ b/frontend/ecommerce/src/app/pages/home/informacion/informacion.component.html
@@ -4,7 +4,7 @@
   <div class="card-img-overlay" style="padding-top: 50px;">
     <p class="card-title" style="color: black; font-size: 70px;font-size: calc(1em + 1vw)"><b class="text-white"><br>¿QUIENES SOMOS?</b></p>
     <p style="color:black;  font-size: 50px;font-size: calc(1em + 1vw)"><b class="text-white">¡Somos tu mejor opción en compras en línea!<br>Brindandote una alta gama de productos a tu alcance.</b></p> <br>
-   <p style="color:black;  font-size: 50px;font-size: calc(1em + 1vw)"> <b class="text-white">¡SOMOS PHOENIX STORE!</b><img src="assets/icons/Logotype.png" class="logo__footer" alt="logo" style="height: 70px;width: 100px;"></p>
+   <p style="color:black;  font-size: 50px;font-size: calc(1em + 1vw)"> <b class="text-white">¡SOMOS PHOENIX STORE!</b><img src="assets/images/icon/Logotype.png" class="logo__footer" alt="logo" style="height: 70px;width: 100px;"></p>
   </div>
 </div>
 
