--- a/frontend/ecommerce/src/assets/scss/style.scss
+++ b/frontend/ecommerce/src/assets/scss/style.scss
@@ -20,7 +20,7 @@ File: scss
 @import 'variable'; 
 @import 'app';
 @import 'sidebar';
-@import 'pages/pages'; 
+//@import 'pages/pages'; 
 @import '../scss/icons/font-awesome/css/font-awesome.min.css';
 @import '../scss/icons/simple-line-icons/css/simple-line-icons.css';
 @import '../scss/icons/weather-icons/css/weather-icons.min.css';
@@ -28,7 +28,7 @@ File: scss
 @import '../scss/icons/themify-icons/themify-icons.css'; 
 @import '../scss/icons/flag-icon-css/flag-icon.min.css';
 @import "../scss/icons/material-design-iconic-font/css/materialdesignicons.min.css";
-@import 'widgets/widgets';
+//@import 'widgets/widgets';
 @import 'grid';
 @import 'responsive'; 
 @import '../css/spinners.css';
