--- a/frontend/ecommerce/src/app/components/shared/panelAdmin/sidebar/sidebar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/panelAdmin/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
         <nav class="sidebar-nav">
             <ul id="sidebarnav">
                 <li class="user-profile">
-                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
+                    <a class="has-arrow waves-effect waves-dark" routerLink="perfil-admin" aria-expanded="false">
                         <img [src]="data.user_img.img_route" alt="user" />
                         <span class="hide-menu"> {{data.first_name}} {{data.last_name}} </span>
                     </a>
