--- a/frontend/ecommerce/src/app/pages/home/perfil/perfil.component.html
+++ b/frontend/ecommerce/src/app/pages/home/perfil/perfil.component.html
@@ -7,14 +7,15 @@
       <br>
       <div class="text-center">
         <div class="uno">
-            <img src="{{cuenta.user_img.img_route}}" class="img-thumbnail imag" alt="avatar">
+            <img src="{{cuenta.user_img.img_route}}" class="img-thumbnail m-0 b-0 p-0 imag" alt="avatar" height="300px" width="300px">
         </div>
         <br>
-        <div class="col-sm-10 text-center"><h5> {{cuenta.first_name +' '+ cuenta.last_name}} </h5></div>
-             <input type="file" id="selectedFile" style="display: none;" (change)="fotoSeleccionada2($event)"/>
-             <input type="button" class="btn btn-primary btn-lx botones" value="Nueva imagen de perfil" onclick="document.getElementById('selectedFile').click();" />
+        <div class="col-sm-10 text-center">
         </div>
         <hr>
+        <h5> {{cuenta.first_name +' '+ cuenta.last_name}} </h5></div>
+             <input type="file" id="selectedFile" style="display: none;" (change)="fotoSeleccionada2($event)"/>
+             <input type="button" class="btn btn-primary btn-lx botones form-control" value="Nueva imagen de perfil" onclick="document.getElementById('selectedFile').click();" />
           <ul class="list-group">
             <li class="list-group-item text-muted">Actividad<i class="fa fa-dashboard fa-1x"></i></li>
             <li class="list-group-item text-left"><span class="pull-left"><strong>Puntuación:</strong></span> 13</li>
@@ -46,16 +47,16 @@
               <form class="needs-validation" novalidate>
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                    <input type="text" class="form-control" placeholder="{{cuenta.first_name}}" [(ngModel)]='accountDetail.first_name' name="first_name">
+                    <input type="text" class="form-control" placeholder="{{cuenta.first_name}}" [(ngModel)]='accountDetail.first_name' name="first_name" id="first_name">
                     </div>
                     <div class="col-md-6 mb-3">
-                    <input type="text" class="form-control" placeholder="{{cuenta.last_name}}" [(ngModel)]='accountDetail.last_name' name="last_name">
+                    <input type="text" class="form-control" placeholder="{{cuenta.last_name}}" [(ngModel)]='accountDetail.last_name' name="last_name" id="last_name">
                     </div>
                     <div class="col-md-6 mb-3">
-                    <input type="text" class="form-control" placeholder="{{cuenta.email}}" [(ngModel)]='accountDetail.email' name="email">
+                    <input type="text" class="form-control" placeholder="{{cuenta.email}}" [(ngModel)]='accountDetail.email' name="email" id="email" >
                     </div>
                     <div class="col-md-6 mb-3">
-                    <input type="email" class="form-control" placeholder="{{cuenta.phone_number}}" [(ngModel)]='accountDetail.phone_number' name="phone_number">
+                    <input type="email" class="form-control" placeholder="{{cuenta.phone_number}}" [(ngModel)]='accountDetail.phone_number' name="phone_number" id="phone_number">
                     </div>
                     
                     <div class="form-row col-md-6">
