Agregar, actualizar y elimiinar productos muestran msg de rtroalimentacion

--- a/frontend/ecommerce/src/app/pages/home/perfil/perfil.component.html
+++ b/frontend/ecommerce/src/app/pages/home/perfil/perfil.component.html
@@ -18,9 +18,7 @@
              <input type="button" class="btn btn-primary btn-lx botones form-control" value="Nueva imagen de perfil" onclick="document.getElementById('selectedFile').click();" />
           <ul class="list-group">
             <li class="list-group-item text-muted">Actividad<i class="fa fa-dashboard fa-1x"></i></li>
-            <li class="list-group-item text-left"><span class="pull-left"><strong>Puntuación:</strong></span> 13</li>
-            <li class="list-group-item text-left"><span class="pull-left"><strong>Productos Vendidos:</strong></span> 37</li>
-            <li class="list-group-item text-left"><span class="pull-left"><strong>Seguidores:</strong></span> 78</li>
+            <li class="list-group-item text-left"><span class="pull-left"><strong>Se Unio a Phoenix Store el:<br>{{cuenta.date_joined}}</strong></span> 13</li>
           </ul> 
          <br>
         </div>
