Se creo Componete DE Ventas Este commit es para no cagarla al crear el servicio

--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -24,7 +24,7 @@
                               <li><a href="/landing">Blog</a>
                                   <ul class="submenu">
                                       <li><a routerLink="/vendedores">Vendedores</a></li>
-                                      <li><a routerLink="/landing">Blog Details</a></li>
+                                      <li><a routerLink="/ventas">Mis Ventas</a></li>
                                   </ul>
                               </li>
                               <!-- <li *ngIf="!auth.estaAutenticado()" ><a routerLink="/login">Registrarse / Acceder</a></li> -->
