Se Solucionaron Cosas Diosito Ayudame

--- a/frontend/ecommerce/src/app/pages/home/perfil/perfil.component.html
+++ b/frontend/ecommerce/src/app/pages/home/perfil/perfil.component.html
@@ -1,5 +1,5 @@
 
-<ng-container *ngFor="let cuenta of cuentas">
+<ng-container *ngIf="cuenta">
 <div class="container bootstrap  " *ngIf="cuenta.id==cuenta_id" >
     <form action="">
     <div class="row">
@@ -124,5 +124,4 @@
 </div><!--/row-->
 
 </ng-container>
-    
                                                       
