Arreglando la cosa XD

--- a/frontend/ecommerce/src/app/pages/home/products/create/create.component.html
+++ b/frontend/ecommerce/src/app/pages/home/products/create/create.component.html
@@ -40,7 +40,7 @@
                     </div> <br> -->
                     <hr>
                     <div class="text-right">
-                        <button class="btn bg-primary text-white" (click)="addproduct()">Agregar</button>
+                        <button class="btn bg-primary text-white form-control" (click)="addproduct()">Agregar</button>
                     </div>
                 </form>
             </div>
