--- a/frontend/ecommerce/src/app/pages/home/products/myproducts/myproducts.component.html
+++ b/frontend/ecommerce/src/app/pages/home/products/myproducts/myproducts.component.html
@@ -60,7 +60,7 @@
         <div class="flip-card-inner">
           <div class="flip-card-front" >
             <label for="" class="label-desc">
-              {{ product.name }}
+              {{ product.name }}<app-update [product]="product"></app-update>
 
             </label><br/>
             <strong>
