--- a/frontend/ecommerce/src/app/pages/home/vendedorprofiles/vendedorprofiles.component.html
+++ b/frontend/ecommerce/src/app/pages/home/vendedorprofiles/vendedorprofiles.component.html
@@ -4,8 +4,8 @@
         <div class="profile-block">
             <div class="profile-block-thumb cover-container"
                 ></div>
-            <div class="profile-img">
-                <img src="{{cuenta.user_img.img_route}}" alt="Imagen de perfil"  height="200px" width="30%" class="mt-3 mb-3 ml-3 mr-3">
+            <div class="">
+                <img src="{{cuenta.user_img.img_route}}" alt="Imagen de perfil"  height="300px" width="300px" class="mt-3 mb-3 ml-3 mr-3">
             </div>
             <strong><h2 class="ml-3">{{cuenta.first_name}} &nbsp; {{cuenta.last_name}}  </h2></strong>   
         </div>
@@ -29,7 +29,7 @@
         <div id="slider">
             <figure>
               <div *ngFor="let image of products_images ">
-                <img *ngIf="product.id==image.product_id.id" src="{{image.images_id.img_route}}" alt="" class="img-fluid"
+                <img *ngIf="product.id==image.product_id.id" src="{{image.images_id.img_route}}" alt="" 
                   alt="Card image" height="200px" width="200px">
               </div>
             </figure>
