--- a/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
+++ b/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
@@ -48,7 +48,7 @@
 
     <div class="div-busqueda input-group md-form form-sm form-2 pl-0 ">
       <input #buscarTexto (keyup)="buscarProducto(buscarTexto.value)" class="form-control barra-busqueda" type="text" placeholder="Buscar..." aria-label="Search">
-      <a (click)="buscarProducto(buscarTexto.value)" ><img class="icono-buscar" src="assets/icons/buscar.png" height="38" alt=""></a>
+      <a (click)="buscarProducto(buscarTexto.value)" ><img class="icono-buscar" src="assets/images/icon/buscar.png" height="38" alt=""></a>
     </div>
 
     <div class="row" style="margin-right: 1%;">
