--- a/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
+++ b/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
@@ -1,45 +1,58 @@
-<div style="margin-bottom: 50px;">
+<div style="min-height: 800px;">
   <div class="sidenav d-sm-none d-md-block d-none d-sm-block" style="background-color: rgb(246, 254, 255);">
+    <h3 class="centrar-texto" style="font-weight: 700;">CATEGORÍAS</h3>
     <p>
-      <a class="" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-        Televisores
+      <a class="" data-toggle="collapse" (click)="buscarProducto('Tecnologia')" class="centrar-texto cat-padre" href="#" role="button" aria-expanded="false" aria-controls="collapseExample">
+        {{ categoria1 }}
       </a>
     </p>
     <div class="collapse show" id="collapseExample">
       <div class="card card-body">
-       <a href="#">Sony</a>
-       <a href="#">LG</a>
-       <a href="#">Samsumg</a>
+        <a class="centrar-texto cat-hija" (click)="buscarProducto('Computadora')" data-toggle="collapse" href="#">Computadoras</a>
+        <a class="centrar-texto cat-hija" (click)="buscarProducto('Celular')" data-toggle="collapse" href="#">Celulares</a>
+        <a class="centrar-texto cat-hija" (click)="buscarProducto('Auricular')" data-toggle="collapse" href="#">Auriculares</a>
       </div>
     </div>
 
     <p>
-      <a class="" data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample">
-        Computadoras
+      <a class="" data-toggle="collapse" (click)="buscarProducto('Interiores')" class="centrar-texto cat-padre" href="#" role="button" aria-expanded="false" aria-controls="collapseExample">
+        {{ categoria3 }}
       </a>
     </p>
-
-    <div class="collapse show" id="collapseExample2">
-      <div class="card card-body">
-       <a href="#">Dell</a>
-       <a href="#">HP</a>
-       <a href="#">Asus</a>
-      </div>
-    </div>
-
-    <p>
-      <a class="" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample">
-        Electrodomesticos
-      </a>
-    </p>
-
     <div class="collapse show" id="collapseExample3">
       <div class="card card-body">
-       <a href="#">Microondas</a>
-       <a href="#">Tostadoras</a>
-       <a href="#">Licuadoras</a>
+        <a class="centrar-texto cat-hija" (click)="buscarProducto('Mueble')" data-toggle="collapse" href="#">Muebles</a>
+        <a class="centrar-texto cat-hija" (click)="buscarProducto('Mesa')" data-toggle="collapse" href="#">Mesas</a>
+        <a class="centrar-texto cat-hija" (click)="buscarProducto('Silla')" data-toggle="collapse" href="#">Sillas</a>
       </div>
     </div>
+
+    <p>
+      <a class="" data-toggle="collapse" (click)="buscarProducto('Instrumentos musicales')" class="centrar-texto cat-padre" href="#" role="button" aria-expanded="false" aria-controls="collapseExample">
+        {{ categoria4 }}
+      </a>
+    </p>
+    <div class="collapse show" id="collapseExample4">
+      <div class="card card-body">
+       <a class="centrar-texto cat-hija" (click)="buscarProducto('Guitarra')" data-toggle="collapse" href="#">Guitarras</a>
+       <a class="centrar-texto cat-hija" (click)="buscarProducto('Bateria')" data-toggle="collapse" href="#">Baterias</a>
+       <a class="centrar-texto cat-hija" (click)="buscarProducto('Amplificador')" data-toggle="collapse" href="#">Amplificadores</a>
+      </div>
+    </div>
+
+    <p>
+      <a class="" data-toggle="collapse" (click)="buscarProducto('Electrodomesticos')" class="centrar-texto cat-padre" href="#" role="button" aria-expanded="false" aria-controls="collapseExample">
+        {{ categoria2 }}
+      </a>
+    </p>
+    <div class="collapse show" id="collapseExample2">
+      <div class="card card-body">
+        <a class="centrar-texto cat-hija" (click)="buscarProducto('Percoladora')" data-toggle="collapse" href="#">Percoladoras</a>
+        <a class="centrar-texto cat-hija" (click)="buscarProducto('Licuadora')" data-toggle="collapse" href="#">Licuadoras</a>
+        <a class="centrar-texto cat-hija" (click)="buscarProducto('Microonda')" data-toggle="collapse" href="#">Microondas</a>
+      </div>
+    </div>
+
 
   </div>
 
