--- a/frontend/ecommerce/src/app/pages/home/products/update/update.component.html
+++ b/frontend/ecommerce/src/app/pages/home/products/update/update.component.html
@@ -11,16 +11,29 @@
                 <div class="modal-body">
                     <form action="">
                         <div class="form-group">
-                            <input  type="text" [(ngModel)]='productDetail.name' name="name"class="form form-control" placeholder="Nombre">
+                            <input  type="text" [(ngModel)]='productDetail.name' name="name"class="form form-control" placeholder="Nombre" minlength="5" #name="ngModel">
+                            <div *ngIf="name.invalid && (name.dirty || name.touched)" class="text-danger">
+                                <span *ngIf="name.errors.minlength" class="text-center" >
+                                    Debe tener mas de 5 caracteres
+                                </span>
+                                </div>
                         </div>
                         <div class="form-group">
-                            <textarea  [(ngModel)]='productDetail.description' name="description"  id="" cols="10" rows="3" class="form form-control"
+                            <textarea  [(ngModel)]='productDetail.description' name="description"  #description="ngModel" id="" cols="10" rows="3" class="form form-control" minlength="10"
                                 placeholder="Descripcion"></textarea>
+                                <div *ngIf="description.invalid && (description.dirty || description.touched)" class="text-danger">
+                                    <span *ngIf="description.errors.minlength" class="text-center" >
+                                        Debe tener mas de 10 caracteres
+                                    </span>
+                                    </div>
                         </div>
                         <div class="form-group">
+                            <label for="price">Precio</label>
                             <input type="text"  class="form form-control"  name="price" placeholder="Precio" [(ngModel)]='productDetail.price'>
                         </div>
                         <div class="form-group">
+                            
+                        <label for="category_id">Seleccione una Categoria</label>
                             <select class="form-control form-control-sm" [(ngModel)]='productDetail.category_id' name="category_id">
                                 <option *ngFor="let category of categories" [value]="category.id" >
                                     {{category.category_name}}
