Soluciond de errores perfil finalizados

--- a/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
+++ b/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
@@ -28,9 +28,10 @@
         <div class="col-md-3 col-sm-6 col-sx-12 md-mb-30 sm-mb-30 segment-four">
           <h2>Contactanos</h2>
           <p>Envia tus comentarios y solicitudes</p>
+          <span>PhoenixStore@gmail.com</span>
           <form action="#">
-            <input type="email" class="form form-control">
-            <input type="submit" value="Enviar" class="form form-control">
+            <a [routerLink]="['/landing']"><input type="submit" value="Inicio" class="form form-control"></a>
+            
           </form>
           
         </div>
