--- a/frontend/ecommerce/src/app/pages/home/perfil/perfil.component.html
+++ b/frontend/ecommerce/src/app/pages/home/perfil/perfil.component.html
@@ -7,7 +7,7 @@
       <br>
       <div class="text-center">
         <div class="uno">
-            <img src="{{cuenta.user_img.img_route}}" class="img-thumbnail m-0 b-0 p-0 imag" alt="avatar" height="300px" width="300px">
+            <img src="{{cuenta.user_img.img_route}}" class=" m-0 b-0 p-0 imag" alt="avatar" height="250px" width="250px">
         </div>
         <br>
         <div class="col-sm-10 text-center">
