--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-ordenes/gestion-ordenes.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-ordenes/gestion-ordenes.component.html
@@ -62,8 +62,7 @@
                                 <a 
                                     data-toggle="tooltip" 
                                     class="btn btn-sm btn-warning"
-                                    data-original-title="Editar"
-                                    > 
+                                    data-original-title="Editar"> 
                                     <i class="fa fa-pencil"></i> 
                                 </a>
 
@@ -71,8 +70,7 @@
                                     data-toggle="tooltip" 
                                     data-original-title="Borrar"
                                     class="btn btn-sm btn-danger"
-                                    
-                                    > 
+                                    (click)="deleteOrder(order)"> 
                                     <i class="fa fa-trash"></i>
                                 </a>
                             </td>
