--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/gestion-productos.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/gestion-productos.component.html
@@ -67,8 +67,7 @@
                                     data-toggle="tooltip" 
                                     data-original-title="Borrar"
                                     class="btn btn-sm btn-danger"
-                                    (click)="borrarProducto(product)"
-                                    > 
+                                    (click)="borrarProducto(product)"> 
                                     <i class="fa fa-trash"></i>
                                 </a>
                             </td>
@@ -81,7 +80,7 @@
             <div *ngIf="txtTermino.value.length === 0">
                 <button (click)="cambiarPagina(-5)" class="btn btn-secondary">Anteriores</button>
                 &nbsp;
-                <button (click)="cambiarPagina(2)" class="btn btn-secondary">Siguientes</button>
+                <button (click)="cambiarPagina(1)" class="btn btn-secondary">Siguientes</button>
             </div>
 
             </div>
