--- a/frontend/ecommerce/src/app/components/shared/cart/cart.component.html
+++ b/frontend/ecommerce/src/app/components/shared/cart/cart.component.html
@@ -1,3 +1,5 @@
+<div *ngIf="cartItems.length === 0" class="alert alert-info">Your cart is empy</div>
+
 <div class="side-info">
     <div>
       <ul *ngIf="cartItems.length > 0" class="list-group">
