--- a/frontend/ecommerce/src/app/components/shared/product-list/product-item/product-item.component.html
+++ b/frontend/ecommerce/src/app/components/shared/product-list/product-item/product-item.component.html
@@ -3,12 +3,13 @@
 
   <div class="card-body">
     <p class="card-text">
-      <strong>{{ 250 | currency:'USD' }}</strong>
+      <strong>{{ productItem.price | currency:'USD' }}</strong>
     </p>
-    <p class="card-text">prueba</p>
+    <p class="card-text">{{ productItem.description}}</p>
     <div class="d-flex justify-content-between align-items-center">
       <div class="btn-group">
         <button type="button" class="btn btn-sm btn-outline-danger product-btn">View Details</button>
+        <button type="button" class="btn btn-sm btn-primary" (click)="handleAddToCart()">AddToCart</button>
       </div>
     </div>
   </div>
