--- a/frontend/ecommerce/src/app/pages/home/detalle-producto/detalle-producto.component.html
+++ b/frontend/ecommerce/src/app/pages/home/detalle-producto/detalle-producto.component.html
@@ -29,9 +29,9 @@
             </div>
           </div>
           <div class="mx-4">
-            <a href="#" class="btn btn-carrito mx-3 lg-2">Agregar al carrito 
+            <button type="Button" class="btn btn-carrito mx-3 lg-2" (click)="handleAddProduct()">Agregar al carrito 
               <a class="mx-2"><img src="assets/icons/carritoRojo.png" style="width: 20px;" alt=""></a>
-            </a>
+            </button>
           </div> 
         </div>
       </div>
