--- a/frontend/ecommerce/src/app/pages/home/vendedorprofiles/vendedorprofiles.component.html
+++ b/frontend/ecommerce/src/app/pages/home/vendedorprofiles/vendedorprofiles.component.html
@@ -1,13 +1,14 @@
 <!--Portada-->
-    <div class="col-md-12 " *ngIf="cuenta.id==cuenta_id" style="background-image: url('{{cuenta.cover_img.img_route}}');background-repeat: no-repeat;background-size: cover;background-size: 100% 100%">
-        
+<strong><h1 class="ml-3 col-md-12 text-center">{{cuenta.first_name}} &nbsp; {{cuenta.last_name}}  </h1></strong>  
+
+    <div class="col-md-12 " *ngIf="cuenta.id==cuenta_id" style="background-image: url('{{cuenta.cover_img.img_route}}');background-repeat: no-repeat;background-size: cover;background-position: center center">
         <div class="profile-block">
             <div class="profile-block-thumb cover-container"
                 ></div>
             <div class="">
                 <img src="{{cuenta.user_img.img_route}}" alt="Imagen de perfil"  height="300px" width="300px" class="mt-3 mb-3 ml-3 mr-3">
             </div>
-            <strong><h2 class="ml-3">{{cuenta.first_name}} &nbsp; {{cuenta.last_name}}  </h2></strong>   
+             
         </div>
     </div>
 <h1 class="text-center">Productos</h1>
@@ -23,6 +24,7 @@
 
 
 <ng-container *ngFor="let product of products; let i = index;">
+  <ng-container *ngIf="product.user_id.id==cuenta_id">
 <div class="col-lg-4 col-md-4 col-sm-6 col-6 columnas mb-0" >
     <a [routerLink]="['/detalle', product.id]">
       <div class="contenedor-img text-center">
@@ -57,6 +59,7 @@
       </div>
 
   </div>
+</ng-container>
 </ng-container>
 </div>
 <!--FinPortada-->
